added solar background and played with a little css

--- a/public/index.html
+++ b/public/index.html
@@ -15,3 +15,15 @@
     <!-- built files will be auto injected -->
   </body>
 </html>
+
+
+
+<style lang="css">
+  
+body{
+  margin: 0px;
+  width: 100vw;
+  height: 100vh;
+}
+
+</style>
